Agregado de 404 y ajustes en auth/frontend

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -38,4 +38,13 @@ server {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+        error_page 404 /404.html;
+
+        location ~* \.(js|css|html|png|jpg|jpeg|gif|ico)$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
+        try_files $uri $uri/ =404;
+    }
     }
