--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,50 +1,44 @@
 server {
-        listen 80;
-        server_name localhost;
+    listen 80;
+    server_name localhost;
 
-        root /usr/share/nginx/html; # Cambia esta ruta según tu estructura
-        index index.html;
+    root /usr/share/nginx/html; # Cambia esta ruta según tu estructura
+    index index.html;
 
-        location / {
-            root /usr/share/nginx/html/Index; # Carpeta principal
-            try_files $uri /index.html;
-        }
+    error_page 404 /Error/Error404.html;
 
-        location /login {
-            root /usr/share/nginx/html/Login; # Carpeta para login.html
-            try_files $uri /login.html;
-        }
-
-        location /register {
-            root /usr/share/nginx/html/Register; # Carpeta para register.html
-            try_files $uri /register.html;
-        }
-
-        location /static/ {
-            alias /usr/share/nginx/html/; # Archivos estáticos
-        }
-
-        location /img/ {
-            root /usr/share/nginx/html/Img/;
-        }
-        error_page 404 /404.html;
-
-        # Configuración para el API Backend en Node.js (Proxy)
-        location /api/ {
-            proxy_pass http://backend:3000;  # URL de tu servidor Node.js
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        error_page 404 /404.html;
-
-        location ~* \.(js|css|html|png|jpg|jpeg|gif|ico)$ {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires 0;
-        try_files $uri $uri/ =404;
+    location / {
+        root /usr/share/nginx/html/Index; # Carpeta principal
+        try_files $uri =404;
     }
+
+    location /login {
+        root /usr/share/nginx/html/Login; # Carpeta para login.html
+        try_files $uri /login.html;
     }
+
+    location /register {
+        root /usr/share/nginx/html/Register; # Carpeta para register.html
+        try_files $uri /register.html;
+    }
+
+    location /static/ {
+        alias /usr/share/nginx/html/; # Archivos estáticos
+    }
+
+    location /Error {
+        root /usr/share/nginx/html/Error; # Carpeta para login.html
+        try_files $uri /Error404.html;
+    }
+
+    # Configuración para el API Backend en Node.js (Proxy)
+    location /api/ {
+        proxy_pass http://backend:3000;  # URL de tu servidor Node.js
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+}
