--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
 
     location / {
         root /usr/share/nginx/html/Index; # Carpeta principal
-        try_files $uri /validacion.html =404;
+        try_files $uri /index.html =404;
     }
 
     location /login {
@@ -22,8 +22,14 @@ server {
         try_files $uri /register.html;
     }
 
-    location /static/ {
-        alias /usr/share/nginx/html/; # Archivos estáticos
+    location /static {
+        alias /usr/share/nginx/html/assets;
+        try_files $uri =404; # Archivos estáticos
+    }
+
+    location /utils {
+        alias /usr/share/nginx/html/utils;
+        try_files $uri =404;
     }
 
     location /Error {
