--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -22,6 +22,17 @@ server {
         try_files $uri /register.html;
     }
 
+    location /records{ 
+        root /usr/share/nginx/html/Records; # Carpeta para avistamientos.html
+        try_files $uri /records.html;
+    }
+
+    location /users { 
+        root /usr/share/nginx/html/users; # Carpeta para avistamientos.html
+        try_files $uri /users.html;
+    }
+
+
     location /static {
         alias /usr/share/nginx/html/assets;
         try_files $uri =404; # Archivos estáticos
