Visibilidad de menus según rol

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -44,7 +44,7 @@ server {
     }
 
     location /Error {
-        root /usr/share/nginx/html/Error; # Carpeta para login.html
+        alias /usr/share/nginx/html/Error; # Carpeta para login.html
         try_files $uri /Error404.html;
     }
 
