--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -58,4 +58,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /socket.io/ {
+        proxy_pass http://backend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 86400;
+    }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
 }
