--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,10 +19,9 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "mysql2": "^3.11.5",
-    "sequelize": "^6.37.5",
-    "jspdf": "^2.5.2"
-    
+    "sequelize": "^6.37.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
