--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
 
     location / {
         root /usr/share/nginx/html/Index; # Carpeta principal
-        try_files $uri /index.html =404;
+        try_files $uri =404;
     }
 
     location /login {
