--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -16,7 +16,16 @@ server {
         root /usr/share/nginx/html/Login; # Carpeta para login.html
         try_files $uri /login.html;
     }
+    location /change-password {
+        root /usr/share/nginx/html/change-password; # Carpeta para change-password.html
+        try_files $uri /change-password.html;
+    }
+    location /forgot-password {
+        root /usr/share/nginx/html/forgot-password; # Carpeta para change-password.html
+        try_files $uri /forgot-password.html;
+    }
 
+    
     location /register {
         root /usr/share/nginx/html/Register; # Carpeta para register.html
         try_files $uri /register.html;
