--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -37,7 +37,7 @@ server {
     }
 
     location /users { 
-        root /usr/share/nginx/html/users; # Carpeta para avistamientos.html
+        root /usr/share/nginx/html/Users; # Carpeta para Users.html
         try_files $uri /users.html;
     }
 
