Posible arreglo al tiempo

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -73,6 +73,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
+        proxy_set_header X-Forwarded-Proto $scheme; # Añadir esta línea
     }
 
     error_log /var/log/nginx/error.log;
