--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -5,9 +5,24 @@ server {
     root /usr/share/nginx/html; # Cambia esta ruta según tu estructura
     index index.html;
 
+    # Configuración de MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Configuración específica para JavaScript
+    types {
+        application/javascript js;
+        text/javascript js;
+    }
+
     error_page 404 /Error/Error404.html;
 
     location / {
+        root /usr/share/nginx/html/Login; # Carpeta para login.html
+        try_files $uri /login.html;
+    }
+
+    location /index {
         root /usr/share/nginx/html/Index; # Carpeta principal
         try_files $uri /index.html =404;
     }
@@ -50,6 +65,13 @@ server {
     location /utils {
         alias /usr/share/nginx/html/utils;
         try_files $uri =404;
+        add_header Content-Type "application/javascript" always;
+    }
+
+    location /src {
+        alias /usr/share/nginx/html/src;
+        try_files $uri =404;
+        add_header Content-Type "application/javascript" always;
     }
 
     location /Error {
