cambios de redireccion

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -2,49 +2,59 @@ server {
     listen 80;
     server_name localhost;
 
-    root /usr/share/nginx/html; # Cambia esta ruta según tu estructura
+    root /usr/share/nginx/html/index;
     index index.html;
 
     error_page 404 /Error/Error404.html;
 
+    location = / {
+        root /usr/share/nginx/html/Login;
+        try_files $uri /login.html;
+    }
+
     location / {
-        root /usr/share/nginx/html/Index; # Carpeta principal
-        try_files $uri /index.html =404;
+        root /usr/share/nginx/html/Index;
+        try_files $uri /index.html;
+    }
+
+    location /index {
+        root /usr/share/nginx/html/Index;
+        try_files $uri /index.html;
     }
 
     location /login {
-        root /usr/share/nginx/html/Login; # Carpeta para login.html
+        root /usr/share/nginx/html/Login;
         try_files $uri /login.html;
     }
+
     location /change-password {
-        root /usr/share/nginx/html/Change-password; # Carpeta para change-password.html
+        root /usr/share/nginx/html/Change-password;
         try_files $uri /change-password.html;
     }
+
     location /forgot-password {
-        root /usr/share/nginx/html/Forgot-password; # Carpeta para change-password.html
+        root /usr/share/nginx/html/Forgot-password;
         try_files $uri /forgot-password.html;
     }
 
-    
     location /register {
-        root /usr/share/nginx/html/Register; # Carpeta para register.html
+        root /usr/share/nginx/html/Register;
         try_files $uri /register.html;
     }
 
-    location /records{ 
-        root /usr/share/nginx/html/Records; # Carpeta para avistamientos.html
+    location /records { 
+        root /usr/share/nginx/html/Records;
         try_files $uri /records.html;
     }
 
     location /users { 
-        root /usr/share/nginx/html/Users; # Carpeta para Users.html
+        root /usr/share/nginx/html/Users;
         try_files $uri /users.html;
     }
 
-
     location /static {
         alias /usr/share/nginx/html/assets;
-        try_files $uri =404; # Archivos estáticos
+        try_files $uri =404;
     }
 
     location /utils {
@@ -53,13 +63,12 @@ server {
     }
 
     location /Error {
-        alias /usr/share/nginx/html/Error; # Carpeta para login.html
+        alias /usr/share/nginx/html/Error;
         try_files $uri /Error404.html;
     }
 
-    # Configuración para el API Backend en Node.js (Proxy)
     location /api/ {
-        proxy_pass http://backend:3000;  # URL de tu servidor Node.js
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -73,10 +82,9 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
-        proxy_set_header X-Forwarded-Proto $scheme; # Añadir esta línea
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-
 }
