--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "mysql2": "^3.11.5",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1"
