--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "mysql2": "^3.11.5",
+    "node-cron": "^4.1.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.5",
