--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -10,12 +10,18 @@ map $http_origin $cors_origin {
     "~^https?://localhost(:[0-9]+)?$" "$http_origin";
     "~^https?://127\.0\.0\.1(:[0-9]+)?$" "$http_origin";
     "~^https?://[a-zA-Z0-9-]+\.ngrok-free\.app$" "$http_origin";
+    "~^https?://sada\.faa\.mil\.ar$" "$http_origin";  # Tu dominio
     # Agrega aquí otros dominios permitidos
 }
 
 server {
     listen 80;
     server_name localhost;
+
+    # Configuración para confiar en el proxy inverso
+    set_real_ip_from 192.168.0.15;  # IP del proxy Apache
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
 
     # Configuración de CORS más segura
     add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -121,7 +127,7 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Real-IP $http_x_real_ip;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
@@ -140,10 +146,12 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_read_timeout 86400;
+        
+        # Configuración para proxy inverso
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
         
         # CORS específico para WebSocket
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
